public class Chaleco {
  private boolean abierto;

  public void abrir() {
    abierto = true;
  }

  public void cerrar() {
    abierto = false;
  }
}
